<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_hobby"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/hobbyText"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toStartOf="@+id/hobbyImg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/titleText"
                />

            <ImageView
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@mipmap/tenson_guitar"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/titleText"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/hobbyImg"
                />

            <ImageView
                android:id="@+id/creditsImg"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/credits"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleText"
                />

            <TextView
                android:id="@+id/credits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:text="@string/guitarText"
                app:layout_constraintBottom_toBottomOf="@+id/creditsImg"
                app:layout_constraintEnd_toStartOf="@+id/hobbyImg"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/creditsImg"
                app:layout_constraintTop_toTopOf="@+id/creditsImg"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        android:layout_margin="50dp"
        android:layout_gravity="center"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/together"
                android:textStyle="bold"
                android:layout_marginTop="7dp"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/contactMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtName"
                android:layout_marginTop="15dp"
                android:text="@string/nume"
                android:textStyle="italic"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contactMe"
                android:layout_marginTop="7dp"
                android:text="@string/email"
                android:textStyle="italic"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtEmail"
                android:layout_marginTop="7dp"
                android:text="brittleru.github.io/sebastianmocanu/"
                android:textStyle="italic"
                android:layout_marginStart="15dp"
                />

            <ImageView
                android:id="@+id/image"
                android:layout_width="260dp"
                android:layout_height="260dp"
                android:layout_below="@+id/site"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@mipmap/android_left"

                android:contentDescription="@string/work_with_me" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>